--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "red-hat-bold";
+  src: url("./fonts/RedHatDisplay-Black.ttf");
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: "red-hat-regular";
+  src: url("./fonts/RedHatDisplay-Medium.ttf");
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.root-wrapper {
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.root-wrapper .main-container {
+  width: 920px;
+  height: 500px;
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  border-radius: 10px;
+}
+.root-wrapper .main-container .content-container {
+  width: 100%;
+  height: 100%;
+  white-space: pre-line;
+}
+.root-wrapper .main-container .container-1 {
+  background-color: #e38826;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.root-wrapper .main-container #button-1 {
+  color: #e38826;
+}
+.root-wrapper .main-container .container-2 {
+  background-color: #006970;
+}
+.root-wrapper .main-container #button-2 {
+  color: #006970;
+}
+.root-wrapper .main-container .container-3 {
+  background-color: #004241;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.root-wrapper .main-container #button-3 {
+  color: #004241;
 }
 
-.App-link {
-  color: #61dafb;
+h1, img, p, .learn-more-button {
+  margin-left: 44px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  margin-top: 48px;
 }
+
+p {
+  color: rgba(255, 255, 255, 0.75);
+}
+
+/*# sourceMappingURL=App.css.map */
